--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -1,8 +1,8 @@
 ## DB Config
 # localhost connect url
-jdbc.url=jdbc\:mysql\://localhost\:3306/assignment?useUnicode\=true&characterEncoding\=UTF-8
+jdbc.url=jdbc\:mysql\://localhost\:3306/blog?useUnicode\=true&characterEncoding\=UTF-8
 jdbc.username=root
-jdbc.password=2151
+jdbc.password=
 jdbc.driver=com.mysql.jdbc.Driver
 
 ## Connection Pool Config
