--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -2,7 +2,7 @@
 # localhost connect url
 jdbc.url=jdbc\:mysql\://localhost\:3306/blog?useUnicode\=true&characterEncoding\=UTF-8
 jdbc.username=root
-jdbc.password=
+jdbc.password=2151
 jdbc.driver=com.mysql.jdbc.Driver
 
 ## Connection Pool Config
