update javaConfig WebSecurity配置初步完成

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 # Global logging configuration
-log4j.rootLogger=INFO,console
+log4j.rootLogger=info,console
 # Console output...
 
 log4j.appender.console=org.apache.log4j.ConsoleAppender
