--- a/pom.xml
+++ b/pom.xml
@@ -180,6 +180,15 @@
             <version>1.2.2</version>
         </dependency>
 
+        <!-- mybatis逆向工程 -->
+        <!-- https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core -->
+        <!--<dependency>
+            <groupId>org.mybatis.generator</groupId>
+            <artifactId>mybatis-generator-core</artifactId>
+            <version>1.3.5</version>
+        </dependency>-->
+
+
         <!-- ehcache缓存 -->
         <dependency>
             <groupId>net.sf.ehcache</groupId>
