--- a/pom.xml
+++ b/pom.xml
@@ -315,6 +315,13 @@
             <version>1.1.6</version>
         </dependency>
 
+        <!-- JsonWebToken -->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
