--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,12 @@
             <version>7.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
         <!-- 添加junit4依赖 -->
         <dependency>
             <groupId>junit</groupId>
