--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -22,6 +22,8 @@ hibernate.cache.region.factory_class=org.hibernate.cache.impl.NoCachingRegionFac
 hibernate.jdbc.fetch_size=50
 hibernate.ejb.naming_strategy=org.hibernate.cfg.ImprovedNamingStrategy
 hibernate.connection.isolation=4
+hibernate.show_sql=false
+hibernate.generate_ddl=true
 javax.persistence.validation.mode=none
 
 ## Freemarker Template Config
