add redis model

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -48,6 +48,7 @@ redis.maxActive=1024
 redis.maxIdle=200
 redis.maxWait=10000
 redis.testOnBorrow=true
+redis.throwRedisException=true
 
 #java mail
 mail.smtp.auth=true
