update order mongodb

--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -50,6 +50,14 @@ redis.maxWait=10000
 redis.testOnBorrow=true
 redis.throwRedisException=true
 
+## mongodb config
+mongodb.host=127.0.0.1
+mongodb.port=
+mongodb.database=blog
+mongodb.username=
+mongodb.password=
+
+
 #java mail
 mail.smtp.auth=true
 mail.smtp.timeout=25000
