--- a/pom.xml
+++ b/pom.xml
@@ -135,6 +135,19 @@
             <version>${spring.security}</version>
         </dependency>
 
+        <!--spring data-->
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-mongodb</artifactId>
+            <version>2.0.5.RELEASE</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>1.8.9.RELEASE</version>
+        </dependency>
+
         <!--aop依赖-->
         <dependency>
             <groupId>org.aspectj</groupId>
@@ -173,18 +186,18 @@
         </dependency>
 
         <!-- mybatis核心包 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis</artifactId>
             <version>3.2.6</version>
-        </dependency>
+        </dependency>-->
 
         <!-- mybatis/spring包 -->
-        <dependency>
+        <!--<dependency>
             <groupId>org.mybatis</groupId>
             <artifactId>mybatis-spring</artifactId>
             <version>1.2.2</version>
-        </dependency>
+        </dependency>-->
 
         <!-- mybatis逆向工程 -->
         <!-- https://mvnrepository.com/artifact/org.mybatis.generator/mybatis-generator-core -->
@@ -241,11 +254,6 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
             <version>2.9.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.data</groupId>
-            <artifactId>spring-data-redis</artifactId>
-            <version>1.8.9.RELEASE</version>
         </dependency>
         <!-- 添加日志相关jar包 -->
         <dependency>
