--- a/pom.xml
+++ b/pom.xml
@@ -148,6 +148,13 @@
             <version>1.8.9.RELEASE</version>
         </dependency>
 
+        <!--spring rabbitMQ -->
+        <dependency>
+            <groupId>org.springframework.amqp</groupId>
+            <artifactId>spring-rabbit</artifactId>
+            <version>2.0.3.RELEASE</version>
+        </dependency>
+
         <!--aop依赖-->
         <dependency>
             <groupId>org.aspectj</groupId>
