--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -63,3 +63,9 @@ mail.smtp.auth=true
 mail.smtp.timeout=25000
 mail.smtp.ssl.enable=true
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+
+#rabbitmq
+rabbitmq.host=localhost
+rabbitmq.username=guest
+rabbitmq.password=guest
+
