--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -54,8 +54,8 @@ redis.throwRedisException=true
 mongodb.host=127.0.0.1
 mongodb.port=
 mongodb.database=blog
-mongodb.username=
-mongodb.password=
+mongodb.username=root
+mongodb.password=cheney@mongo
 
 
 #java mail
