--- a/src/main/resources/system.properties
+++ b/src/main/resources/system.properties
@@ -51,6 +51,8 @@ redis.testOnBorrow=true
 redis.throwRedisException=true
 
 ## mongodb config
+mongodb.auth=false
+mongodb.authBase=admin
 mongodb.host=127.0.0.1
 mongodb.port=
 mongodb.database=blog
