--- a/src/main/resources/prod/system.properties
+++ b/src/main/resources/prod/system.properties
@@ -38,10 +38,10 @@ template.loader_path=/WEB-INF/template
 template.tag_syntax=auto_detect
 
 ## redis config
-#redis.host=192.168.176.129
 redis.host=127.0.0.1
 redis.port=6379
-redis.password=
+redis.auth=true
+redis.password=cheney@redis
 redis.default.db=0
 redis.timeout=100000
 redis.maxActive=1024
